<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InfoProjectActivity">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        android:id="@+id/header_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/project_name"
        app:titleTextColor="@color/white"/>

    <TextView
        android:id="@+id/createdTextView"
        style="@style/InfoTV"
        android:text="@string/created_at"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_toolbar" />

    <TextView
        android:id="@+id/user_loginTextView"
        style="@style/InfoTV"
        android:text="@string/user_login"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createdTextView" />

    <TextView
        android:id="@+id/usernameTextView"
        style="@style/InfoTV"
        android:text="@string/user_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_loginTextView" />
</android.support.constraint.ConstraintLayout>
