<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lubinskiy.app01.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/btn_authorize" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutUser"
            style="@style/MiniLinearLayout"
            app:layout_constraintBottom_toTopOf="@+id/btn_authorize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userTextView"
                style="@style/MainTV"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameEditText"
                style="@style/MainEV"
                android:hint="@string/space"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutToken"
            style="@style/MiniLinearLayout"
            app:layout_constraintBottom_toTopOf="@+id/btn_authorize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tokenTextView"
                style="@style/MainTV"
                android:text="@string/private_token" />

            <EditText
                android:id="@+id/tokenEditText"
                style="@style/MainEV"
                android:hint="@string/space"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_authorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClick"
        android:text="@string/btn_authorize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
